Fixes #203. Auto Refresh Not Working Properly
- added an internal ping-pong, if no response from the server, the old websocket is closed and a new websocket is opened.
- addendum: it turns out that "Quit" didn't actually close the websocket, so, quittting/playing/quitting/playing caused three websockets to be active.
- added some debugging code in the who rest service, this must be removed with time.